andhikasamudra.rust-explr.65b5a51210109e676497290ee60d6615f89346a8
Running as unit: run-p1623166-i5816857.scope; invocation ID: 1fb82859ec6b4e979c5e14531bc0c0dd
warning: rust-test v0.1.0 (/tmp/nix-shell.cigUv1/andhikasamudra_rust-explr_uvgd_2fj) ignoring invalid dependency `diesel_cli` which is missing a lib target
   Compiling proc-macro2 v1.0.94
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.170
    Checking cfg-if v1.0.0
   Compiling autocfg v1.4.0
    Checking bytes v1.10.1
    Checking smallvec v1.14.0
    Checking pin-project-lite v0.2.16
    Checking log v0.4.26
    Checking futures-core v0.3.31
   Compiling parking_lot_core v0.9.10
    Checking scopeguard v1.2.0
   Compiling pkg-config v0.3.32
    Checking itoa v1.0.15
   Compiling shlex v1.3.0
    Checking once_cell v1.20.3
    Checking fnv v1.0.7
   Compiling lock_api v0.4.12
    Checking stable_deref_trait v1.2.0
    Checking futures-task v0.3.31
    Checking pin-utils v0.1.0
    Checking tracing-core v0.1.33
    Checking futures-util v0.3.31
   Compiling version_check v0.9.5
    Checking memchr v2.7.4
    Checking futures-sink v0.3.31
   Compiling vcpkg v0.2.15
   Compiling quote v1.0.39
   Compiling slab v0.4.9
   Compiling serde v1.0.218
   Compiling jobserver v0.1.32
    Checking socket2 v0.5.8
    Checking mio v1.0.3
    Checking parking_lot v0.12.3
   Compiling syn v2.0.99
   Compiling cc v1.2.16
    Checking signal-hook-registry v1.4.2
    Checking hashbrown v0.15.2
    Checking equivalent v1.0.2
    Checking bitflags v2.9.0
    Checking writeable v0.5.5
    Checking litemap v0.7.5
    Checking http v1.2.0
    Checking percent-encoding v2.3.1
    Checking getrandom v0.2.15
   Compiling httparse v1.10.1
    Checking byteorder v1.5.0
    Checking icu_locid_transform_data v1.5.0
   Compiling either v1.15.0
    Checking tower-service v0.3.3
   Compiling typenum v1.18.0
    Checking icu_properties_data v1.5.0
   Compiling generic-array v0.14.7
    Checking indexmap v2.7.1
    Checking utf16_iter v1.0.5
    Checking icu_normalizer_data v1.5.0
    Checking utf8_iter v1.0.4
    Checking write16 v1.0.0
    Checking httpdate v1.0.3
   Compiling num-traits v0.2.19
    Checking atomic-waker v1.1.2
   Compiling anyhow v1.0.97
    Checking try-lock v0.2.5
    Checking want v0.3.1
    Checking rand_core v0.6.4
    Checking http-body v1.0.1
    Checking form_urlencoded v1.2.1
    Checking futures-channel v0.3.31
    Checking powerfmt v0.2.0
   Compiling num-conv v0.1.0
   Compiling paste v1.0.15
   Compiling openssl v0.10.71
    Checking foreign-types-shared v0.1.1
   Compiling ident_case v1.0.1
   Compiling strsim v0.11.1
    Checking ryu v1.0.20
    Checking mime v0.3.17
   Compiling openssl-sys v0.9.106
   Compiling zstd-sys v2.0.14+zstd.1.5.7
    Checking base64 v0.22.1
   Compiling time-core v0.1.3
    Checking tower-layer v0.3.3
    Checking http-body-util v0.1.2
   Compiling time-macros v0.2.20
    Checking foreign-types v0.3.2
    Checking deranged v0.3.11
   Compiling itertools v0.14.0
    Checking aho-corasick v1.1.3
    Checking sync_wrapper v1.0.2
   Compiling native-tls v0.2.14
   Compiling rustversion v1.0.20
    Checking alloc-no-stdlib v2.0.4
    Checking local-waker v0.1.4
   Compiling zstd-safe v7.2.3
   Compiling serde_json v1.0.140
    Checking regex-syntax v0.8.5
    Checking time v0.3.39
    Checking alloc-stdlib v0.2.2
    Checking num-integer v0.1.46
   Compiling ahash v0.8.11
    Checking http v0.2.12
   Compiling indexmap v1.9.3
   Compiling getrandom v0.3.1
   Compiling thiserror v2.0.12
    Checking openssl-probe v0.1.6
   Compiling rustix v1.0.2
    Checking adler2 v2.0.0
    Checking regex-automata v0.4.9
   Compiling tracing v0.1.41
    Checking miniz_oxide v0.8.5
    Checking actix-service v2.0.2
   Compiling bytestring v1.4.0
    Checking num-bigint v0.4.6
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
    Checking brotli-decompressor v4.0.2
    Checking digest v0.10.7
    Checking actix-utils v3.0.1
   Compiling ring v0.17.13
   Compiling libsqlite3-sys v0.31.0
   Compiling cookie v0.16.2
   Compiling mysqlclient-sys v0.4.2
    Checking crc32fast v1.4.2
    Checking encoding_rs v0.8.35
   Compiling prettyplease v0.2.30
    Checking hashbrown v0.12.3
   Compiling heck v0.5.0
    Checking cpufeatures v0.2.17
   Compiling pq-sys v0.7.0
   Compiling convert_case v0.4.0
    Checking linux-raw-sys v0.9.2
   Compiling synstructure v0.13.1
   Compiling darling_core v0.20.10
   Compiling regex-lite v0.1.6
    Checking regex v1.11.1
   Compiling diesel_table_macro_syntax v0.2.0
    Checking sha1 v0.10.6
    Checking brotli v6.0.0
   Compiling tokio-macros v2.5.0
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.7.5
   Compiling zerovec-derive v0.10.3
    Checking tokio v1.44.0
   Compiling tracing-attributes v0.1.28
   Compiling displaydoc v0.2.5
    Checking zerofrom v0.1.6
   Compiling serde_derive v1.0.218
    Checking yoke v0.7.5
    Checking zerovec v0.10.4
   Compiling icu_provider_macros v1.5.0
   Compiling zerocopy-derive v0.7.35
   Compiling openssl-macros v0.1.1
   Compiling darling_macro v0.20.10
   Compiling prost-derive v0.13.5
    Checking zerocopy v0.7.35
    Checking tinystr v0.7.6
    Checking icu_collections v1.5.0
    Checking icu_locid v1.5.0
   Compiling darling v0.20.10
    Checking ppv-lite86 v0.2.20
   Compiling async-trait v0.1.87
   Compiling pin-project-internal v1.1.10
    Checking icu_provider v1.5.0
    Checking rand_chacha v0.3.1
    Checking prost v0.13.5
    Checking rand v0.8.5
    Checking icu_locid_transform v1.5.0
   Compiling thiserror-impl v2.0.12
    Checking axum-core v0.4.5
    Checking pin-project v1.1.10
    Checking icu_properties v1.5.1
   Compiling dsl_auto_type v0.1.3
    Checking tokio-util v0.7.13
    Checking tower v0.5.2
    Checking actix-rt v2.10.0
    Checking tokio-native-tls v0.3.1
    Checking h2 v0.4.8
    Checking h2 v0.3.26
    Checking actix-codec v0.5.2
    Checking zstd v0.13.3
   Compiling derive_more v0.99.19
   Compiling async-stream-impl v0.3.6
    Checking flate2 v1.1.0
    Checking icu_normalizer v1.5.0
    Checking idna_adapter v1.2.0
    Checking idna v1.0.3
    Checking url v2.5.4
    Checking serde_urlencoded v0.7.1
   Compiling actix-router v0.5.3
    Checking local-channel v0.1.5
    Checking scheduled-thread-pool v0.2.7
    Checking matchit v0.7.3
    Checking fixedbitset v0.5.7
    Checking language-tags v0.3.2
    Checking rustls-pki-types v1.11.0
    Checking fastrand v2.3.0
    Checking untrusted v0.9.0
    Checking rustls-pemfile v2.2.0
    Checking tempfile v3.18.0
   Compiling actix-web-codegen v4.3.0
    Checking hyper v1.6.0
    Checking petgraph v0.7.1
    Checking actix-http v3.9.0
    Checking axum v0.7.9
    Checking r2d2 v0.8.10
    Checking async-stream v0.3.6
    Checking simple_asn1 v0.6.3
    Checking actix-server v2.5.0
    Checking hyper-util v0.1.10
    Checking tower v0.4.13
   Compiling diesel_derives v2.2.4
    Checking tokio-stream v0.1.17
    Checking prost-types v0.13.5
   Compiling actix-macros v0.2.4
    Checking pem v3.0.5
    Checking combine v4.6.7
    Checking impl-more v0.1.9
    Checking multimap v0.10.0
    Checking sha1_smol v1.0.1
    Checking arc-swap v1.7.1
    Checking ipnet v2.11.0
    Checking jsonwebtoken v9.3.1
    Checking dotenv v0.15.0
    Checking prost-build v0.13.5
    Checking hyper-timeout v0.5.2
    Checking hyper-tls v0.6.0
    Checking reqwest v0.12.14
    Checking actix-web v4.9.0
    Checking diesel v2.2.8
    Checking tonic v0.12.3
    Checking redis v0.29.1
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.8/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
